# modernC

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: docs-deploy.yml
deb/: make.sh
docs/: README.md  _config.yml  option.md  panic.md  result.md  string.md  template.md  var.md  vec.md
example/: fizzbuzz.c  main.c  option_demo.c  panic_demo.c  result_error_demo.c  result_option_demo.c  string_demo.c  vec_demo.c
include/: m_option.h  m_result.h  m_var.h  m_vec.h  modern.h
src/: m_result.c  m_var.c  m_vec.c  modern.c
